--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "npm": "^6.1.0",
     "react": "^16.4.0",
     "react-autosuggest": "^9.3.4",
     "react-dom": "^16.4.0",
+    "react-isolated-scroll": "^0.1.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
